Updated landing page hero image and adjusted CSS to prevent the image from stretching.

--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -124,13 +124,28 @@ body {
 }
 
 /* **MAIN CONTENT** */
-.img-container {
+#image-container {
+    align-items: center;
+    align-content: center;
+    justify-content: center;
     height: 70vh;
+    background-color: black;
+    width: 100%;
+}
+
+#image-row {
+    width: 100%;
+    height: 100%;
+    background-color: Black;
 }
 
 #mower {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     z-index: 2;
-    width: 100vw
+    background-repeat: no-repeat;
+    height: 100%;
     
 }
 
